--- a/0x00-Webpack/task_0/package.json
+++ b/0x00-Webpack/task_0/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "jquery": "^3.6.0",
+    "jquery": "^3.6.0"
+  },
+  "devDependencies": {
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
