--- a/0x01-react_intro/task_5/dashboard/package.json
+++ b/0x01-react_intro/task_5/dashboard/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack serve --mode development --config config/webpack.config.js",
     "build": "webpack --mode production --config config/webpack.config.js",
-    "start": "webpack serve --open --mode development --config config/webpack.config.js",
+    "start": "webpack-dev-server --mode development --config config/webpack.config.js",
     "test": "jest"
   },
   "keywords": [],
